--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@
 }
 
 .testimonial-carousel .owl-item.center .testimonial-item i {
-    color: var(--secondary) !important;
+    color: var(--dark) !important;
 }
 
 .testimonial-carousel .owl-nav {
