--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@
 .page-header {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: url(../img/header-image.jpg) top right no-repeat;
+    background: url(../img/sungai-2.jpeg) top right no-repeat;
     background-size: cover;
 }
 
